[package]
name = "sqlx-example-sqlite-sqlcipher"
version = "0.1.0"
edition = "2021"
workspace = "../../../"

[dependencies]
anyhow = "1.0"
futures = "0.3"
# optional = false - force to build the package with sqlcipher feature enabled
libsqlite3-sys = { version = "0.24.1", optional = false, default-features = false, features = [
     "bundled-sqlcipher"
] }

sqlx = { path = "../../../", features = ["sqlite", "runtime-tokio-rustls"] }
structopt = "0.3"
tempdir = "0.3.7"
tokio = { version = "1.20.0", features = ["macros"]}
